--- a/bin/view/Cadastro_Funcionario.fxml
+++ b/bin/view/Cadastro_Funcionario.fxml
@@ -205,7 +205,7 @@
             </VBox>
          </content>
          <BorderPane.margin>
-            <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
+            <Insets />
          </BorderPane.margin>
       </ScrollPane>
    </center>
