--- a/bin/view/Agenda.fxml
+++ b/bin/view/Agenda.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.gluonhq.charm.glisten.control.ToggleButtonGroup?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
@@ -21,22 +23,6 @@
                   <Font name="Impact" size="32.0" />
                </font>
             </Label>
-            <RadioButton mnemonicParsing="false" text="Calendário">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="30.0" />
-               </VBox.margin>
-            </RadioButton>
-            <RadioButton mnemonicParsing="false" text="Tabela">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </RadioButton>
             <Label text="Modo de exibição">
                <font>
                   <Font name="Impact" size="18.0" />
@@ -45,25 +31,45 @@
                   <Insets top="30.0" />
                </VBox.margin>
             </Label>
+            <ToggleButtonGroup selectionType="SINGLE">
+                <toggles>
+                  <RadioButton mnemonicParsing="false" text="Calendário">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </RadioButton>
+                  <RadioButton mnemonicParsing="false" text="Tabela">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </RadioButton>
+                </toggles>
+               <VBox.margin>
+                  <Insets left="10.0" top="10.0" />
+               </VBox.margin>
+            </ToggleButtonGroup>
             <Label text="Ordernar por:">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Impact" size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets top="20.0" />
                </VBox.margin>
             </Label>
             <ComboBox prefWidth="150.0">
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets left="10.0" top="10.0" />
                </VBox.margin>
             </ComboBox>
             <Label text="Filtrar por:">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Impact" size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets top="20.0" />
                </VBox.margin>
             </Label>
             <Label text="Paciente">
@@ -87,11 +93,11 @@
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
             </Label>
-            <TextField prefHeight="25.0" prefWidth="189.0">
+            <DatePicker>
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
-            </TextField>
+            </DatePicker>
             <Label text="Médico">
                <font>
                   <Font size="14.0" />
