--- a/bin/view/Cadastro_Funcionario.fxml
+++ b/bin/view/Cadastro_Funcionario.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
@@ -17,7 +18,7 @@
    <center>
       <ScrollPane fx:id="transparentBG" BorderPane.alignment="CENTER">
          <content>
-            <VBox fx:id="formulario" fillWidth="false">
+            <VBox fx:id="formulario" fillWidth="false" stylesheets="@application.css">
                <children>
                   <Label text="Dados pessoais">
                      <font>
@@ -63,11 +64,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField>
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </TextField>
+                  <DatePicker />
                   <Label text="Endereço">
                      <font>
                         <Font name="Impact" size="28.0" />
