--- a/src/view/Cadastro_Funcionario.fxml
+++ b/src/view/Cadastro_Funcionario.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.gluonhq.charm.glisten.control.ToggleButtonGroup?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
@@ -63,11 +65,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField>
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </TextField>
+                  <DatePicker />
                   <Label text="Endereço">
                      <font>
                         <Font name="Impact" size="28.0" />
@@ -165,19 +163,23 @@
                      <VBox.margin>
                         <Insets bottom="10.0" />
                      </VBox.margin></Line>
-                  <RadioButton fx:id="radioButtonMedico1" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Médico">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </RadioButton>
-                  <RadioButton fx:id="radioButtonAtendente1" mnemonicParsing="false" prefHeight="27.0" prefWidth="134.0" text="Atendente">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </RadioButton>
+                  <ToggleButtonGroup selectionType="SINGLE">
+                      <toggles>
+                        <RadioButton fx:id="radioButtonMedico1" mnemonicParsing="false" text="Médico">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </RadioButton>
+                        <RadioButton fx:id="radioButtonAtendente1" mnemonicParsing="false" text="Atendente">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <padding>
+                              <Insets left="30.0" />
+                           </padding>
+                        </RadioButton>
+                      </toggles>
+                  </ToggleButtonGroup>
                   <HBox prefHeight="37.0" prefWidth="445.0">
                      <children>
                         <Button mnemonicParsing="false" prefHeight="37.0" prefWidth="150.0" text="Salvar">
